gcp/task-004-traefik/traefik-2.2/part3-traefik-whoami-lets-encrypt/15-traefik-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.1
          args:
#            - --api
#            - --api.insecure
#            - --accesslog
#            - --entrypoints.web.address=:80
#            - --entrypoints.websecure.address=:443
#            - --providers.kubernetescrd
#            - --certificatesresolvers.default.acme.tlschallenge
#            - --certificatesresolvers.default.acme.email=emailexample@gmail.com
#            - --certificatesresolvers.default.acme.storage=acme.json
#            # Please note that this is the staging Let's Encrypt server.
#            # Once you get things working, you should remove that whole line altogether.
#            - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            #- --log.level=DEBUG
            - --api.insecure=true
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --certificatesresolvers.myresolver.acme.httpchallenge=true
            - --certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web
            #- "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
            - --certificatesresolvers.myresolver.acme.email=emailexample@gmail.com
            - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json

          ports:
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080
            - name: websecure
              containerPort: 443
